@@ -1,5 +1,5 @@
 /*
-   Copyright 2007 Olaf Delgado-Friedrichs
+   Copyright 2008 Olaf Delgado-Friedrichs
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -12,22 +12,6 @@
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-*/
-
-/*
-Copyright 2005 Olaf Delgado-Friedrichs
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
 */
 
 
@@ -49,10 +33,10 @@ import buoy.event.EventProcessor;
 import buoy.event.EventSource;
 import buoy.widget.BButton;
 import buoy.widget.BLabel;
+import buoy.widget.BorderContainer;
 import buoy.widget.LayoutInfo;
-import buoy.widget.RowContainer;
 
-public class OptionColorBox extends RowContainer {
+public class OptionColorBox extends BorderContainer {
 	private boolean eventsLocked = false;
 	
 	static private Color currentColor = null;
@@ -77,11 +61,11 @@ public class OptionColorBox extends RowContainer {
 		this.setBackground(null);
 
 		this.setDefaultLayout(new LayoutInfo(LayoutInfo.WEST, LayoutInfo.NONE,
-				new Insets(2, 5, 2, 5), null));
+				new Insets(2, 10, 2, 10), null));
 
 		final BButton color = new BButton();
-		this.add(color);
-		this.add(new BLabel(label));
+		this.add(color, BorderContainer.WEST);
+		this.add(new BLabel(label), BorderContainer.EAST);
 
 		final PropertyDescriptor prop = Config.namedProperty(target, option);
 		if (prop == null) {
@@ -91,7 +75,7 @@ public class OptionColorBox extends RowContainer {
 		final Method getter = prop.getReadMethod();
 		final Method setter = prop.getWriteMethod();
 
-		color.setBackground((Color) getter.invoke(target, null));
+		color.setBackground((Color) getter.invoke(target));
 		color.addEventLink(CommandEvent.class, new EventProcessor() {
 			public void handleEvent(final Object event) {
 				if (obtainLock()) {
